apply plugin: "kotlin"

targetCompatibility = JavaVersion.VERSION_11
sourceCompatibility = JavaVersion.VERSION_11

[compileJava, compileTestJava]*.options*.encoding = 'UTF-8'

sourceSets.main.java.srcDirs = ["src/main/java"]
sourceSets.main.resources.srcDirs += ["../../android/assets"]

project.ext.mainClassName = "castle.server.ashley.app.ServerLauncher"
project.ext.assetsDir = new File("../../android/assets")

dependencies {
    implementation 'org.mockito:mockito-all:1.10.19'

    implementation "io.github.libktx:ktx-app:$ktxVersion"
    implementation "io.github.libktx:ktx-math:$ktxVersion"
    implementation "com.badlogicgames.ashley:ashley:$ashleyVersion"
    implementation "com.badlogicgames.gdx:gdx-ai:$aiVersion"
    api "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-desktop"
    api "com.badlogicgames.gdx:gdx-backend-headless:$gdxVersion"
    api "com.badlogicgames.gdx:gdx-backend-lwjgl:$gdxVersion"
    api "com.badlogicgames.gdx:gdx-bullet:$gdxVersion"
    api "com.badlogicgames.gdx:gdx-bullet-platform:$gdxVersion:natives-desktop"
    api "org.jetbrains.kotlin:kotlin-stdlib:$kotlinVersion"
}

task run(dependsOn: classes, type: JavaExec) {
    jvmArgs("--illegal-access=deny")
    main = project.mainClassName
    classpath = sourceSets.main.runtimeClasspath
    standardInput = System.in
    workingDir = project.assetsDir
    ignoreExitValue = true
}

task debug(dependsOn: classes, type: JavaExec) {
    jvmArgs("--illegal-access=deny")
    main = project.mainClassName
    classpath = sourceSets.main.runtimeClasspath
    standardInput = System.in
    workingDir = project.assetsDir
    ignoreExitValue = true
    debug = true
}